[tool.poetry]
name = "usepy"
version = "0.4.0"
description = "usepy"
homepage = "https://usepy.code05.com/"
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [
    { include = 'usepy', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = [
    { version = "^4.0.0", python = ">=3.6,<3.7" },
    { version = "^4.5.0", python = ">=3.7" }
]


[tool.poetry.group.test.dependencies]
pylint = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
ruff = "*"
pre-commit = "*"
pre-commit-hooks = "*"

[tool.ruff]
ignore = [
    "E501", # line too long, handled by black
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
