[tool.poetry]
name = "usepy"
version = "0.4.21"
description = "usepy"
homepage = "https://usepy.code05.com/"
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [
    { include = 'usepy', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.5.0"


[tool.poetry.group.test.dependencies]
pylint = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
ruff = "*"
pre-commit = "*"
pre-commit-hooks = "*"

[tool.ruff.lint]
ignore = [
    "E501", # line too long, handled by black
    "F403", # star imports
    "F405", # may be undefined from star imports
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
